fix(ɵtoolkit/accordion): stretch the accordion header horizontally to its full width

--- a/projects/scion/toolkit.internal/widgets/src/accordion/accordion.component.scss
+++ b/projects/scion/toolkit.internal/widgets/src/accordion/accordion.component.scss
@@ -25,6 +25,10 @@ $background-color: var(--sci-color-P100);
       align-items: center;
       cursor: pointer;
       user-select: none;
+
+      > div.header-content {
+        flex: auto;
+      }
     }
 
     > section {
